--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DrySisters</string>
+    <string name="app_name">myDrySisters</string>
     <string name="dry">Dry</string>
     <string name="next_one">下一个</string>
     <string name="previous_one">上一个</string>
